--- a/package.json
+++ b/package.json
@@ -1,39 +1,34 @@
 {
   "name": "mesto",
-  "version": "1.0.0",
-  "description": "Данный проект является результатом самостоятельной практической работы, выполненной в процессе работы над курсом **Базовый JavaScript и работа с браузером** _[Яндекс Практикума](https://praktikum.yandex.ru/)_",
-  "main": "index.js",
-  "scripts": {
-    "build": "rd /s /q dist && webpack",
-    "dev": "webpack-dev-server --open --watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BerezinKonstantin/mesto.git"
-  },
-  "author": "Berezin Konstsntin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BerezinKonstantin/mesto/issues"
-  },
-  "homepage": "https://github.com/BerezinKonstantin/mesto#readme",
-  "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "autoprefixer": "^9.8.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.3",
-    "cssnano": "^4.1.10",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss-loader": "^3.0.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "corejs": "^1.0.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
