--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
+  "author": "Berezin Konstantin",
   "homepage": "https://berezinkonstantin.github.io/mesto-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
