--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "author": "Berezin Konstantin",
-  "homepage": ".",
+  "homepage": "https://berezinkonstantin.github.io/react-mesto-auth/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
